@@ -15,7 +15,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @JsonPropertyOrder({
         "detectTime",
@@ -444,7 +443,7 @@ public class Detection {
                     .stream()
                     .filter(entry -> entry.getKey() != null)
                     .map(entry -> new DetectionValue(entry.getKey(), entry.getValue()))
-                    .collect(Collectors.toList());
+                    .toList();
             return this;
         }
 
