@@ -26,7 +26,7 @@ import stroom.annotation.shared.SetStatusRequest;
 import stroom.event.logging.api.DocumentEventLog;
 import stroom.event.logging.rs.api.AutoLogged;
 import stroom.event.logging.rs.api.AutoLogged.OperationType;
-import stroom.util.filter.QuickFilterPredicateFactory;
+import stroom.query.common.v2.ExpressionPredicateFactory;
 import stroom.util.logging.LambdaLogger;
 import stroom.util.logging.LambdaLoggerFactory;
 
@@ -34,7 +34,7 @@ import jakarta.inject.Inject;
 import jakarta.inject.Provider;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.function.Predicate;
 
 @AutoLogged(OperationType.MANUALLY_LOGGED)
 class AnnotationResourceImpl implements AnnotationResource {
@@ -44,14 +44,17 @@ class AnnotationResourceImpl implements AnnotationResource {
     private final Provider<AnnotationService> annotationService;
     private final Provider<DocumentEventLog> documentEventLog;
     private final Provider<AnnotationConfig> annotationConfig;
+    private final Provider<ExpressionPredicateFactory> expressionPredicateFactoryProvider;
 
     @Inject
     AnnotationResourceImpl(final Provider<AnnotationService> annotationService,
                            final Provider<DocumentEventLog> documentEventLog,
-                           final Provider<AnnotationConfig> annotationConfig) {
+                           final Provider<AnnotationConfig> annotationConfig,
+                           final Provider<ExpressionPredicateFactory> expressionPredicateFactoryProvider) {
         this.annotationService = annotationService;
         this.documentEventLog = documentEventLog;
         this.annotationConfig = annotationConfig;
+        this.expressionPredicateFactoryProvider = expressionPredicateFactoryProvider;
     }
 
     @Override
@@ -139,8 +142,8 @@ class AnnotationResourceImpl implements AnnotationResource {
         if (allValues == null || allValues.isEmpty()) {
             return allValues;
         } else {
-            return QuickFilterPredicateFactory.filterStream(quickFilterInput, allValues.stream())
-                    .collect(Collectors.toList());
+            final Predicate<String> predicate = expressionPredicateFactoryProvider.get().create(quickFilterInput);
+            return allValues.stream().filter(predicate).toList();
         }
     }
 }
