@@ -330,7 +330,7 @@ class TestMetaDaoImpl {
                     .leftOuterJoin(metaProcessor).on(meta.PROCESSOR_ID.eq(metaProcessor.ID))
                     .orderBy(meta.ID)
                     .stream()
-                    .collect(Collectors.toList());
+                    .toList();
 
             LOGGER.debug("meta rows:\n{}",
                     AsciiTable.builder(metaRows)
@@ -1021,7 +1021,7 @@ class TestMetaDaoImpl {
                 .extracting(SimpleMeta::getId)
                 .containsExactlyElementsOf(LongStream.rangeClosed(minId, maxId)
                         .boxed()
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     @Test
@@ -1038,7 +1038,7 @@ class TestMetaDaoImpl {
                 .extracting(SimpleMeta::getId)
                 .containsExactlyElementsOf(LongStream.range(minId, minId + 5)
                         .boxed()
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     @Test
@@ -1056,7 +1056,7 @@ class TestMetaDaoImpl {
                 .extracting(SimpleMeta::getId)
                 .containsExactlyElementsOf(LongStream.range(minId, minId + 5)
                         .boxed()
-                        .collect(Collectors.toList()));
+                        .toList());
     }
 
     @Test
@@ -1107,7 +1107,7 @@ class TestMetaDaoImpl {
         assertThat(ids)
                 .containsExactlyInAnyOrderElementsOf(LongStream.range(metaMinId, metaMinId + 40)
                         .boxed()
-                        .collect(Collectors.toList()));
+                        .toList());
 
         assertThat(inputIds.containsAll(ids))
                 .isTrue();
